# ncsw-model

./: README.md  environment.yaml  setup.cfg
ncsw_model/: __init__.py
