[metadata]
name = ncsw_model
version = 2024.06.1
author = Haris Hasic
description = The NeoChemSynthWave: Model package.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    chemical-compounds,
    chemical-reactions,
    chemical-synthesis,
    chemoinformatics,
    retrosynthesis,
    retrosynthetic-analysis

[options]
packages = find:

[options.packages.find]
include =
    ncsw_model
exclude =
    references
