[metadata]
name = ncsw_model
author = Haris Hasic
description = The NeoChemSynthWave: Model project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords =
    chemoinformatics

[options]
packages = find:

[options.packages.find]
include =
    ncsw_model
